--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Is it Simon's Birthday yet?</title>
   <style type="text/css">
   body {
   background-color: #000;
