Typo. >>>>>>> 40bcced9d50582bc16eee6c2a1d8486f235c428a

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Is it Simon's Birthday yet?</title>
+  <title>Is it Simon's Birthday today?</title>
   <style type="text/css">
   body {
   background-color: #000;
