--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Is it Simon's Birthday today?</title>
+  <title>Is it Simon's bath day today?</title>
   <style type="text/css">
   body {
   background-color: #000;
@@ -27,7 +27,6 @@
   color: #fff;
   }
   </style>
-  <title>Birthdayyet</title>
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
